[package]
name = "matching_game_state"
version = "0.1.0"
authors = ["Jacob <jacobdmalter@outlook.com>"]
edition = "2021"
rust-version = "1.69"
description = "Abstractions for a matching game."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
map-macro = "0.2.4"
bimap = "0.6.3"
smallvec = "1.10.0"
either = "1.8.1"
itertools = "0.10.5"
tap = "1.0.1"
konst = "0.3.4"
num = "0.4.0"
num-traits = "0.2.15"
num-derive = "0.3.3"
async-trait = "0.1.58"
futures = "0.3.28"